--- a/mockups/css/specific_v01.css
+++ b/mockups/css/specific_v01.css
@@ -11,15 +11,19 @@
 /*******************************/
 
 
+/*
+
 :root {
     --border-width: none;
     --imagename-opacity: .8;
   }
 
 @media only screen
-    and (max-width : 560px) {
+    and (max-width : 568px) {
 	:root {-webkit-text-size-adjust: none;}
 }
+
+*/
 
 /*******************************/
 
@@ -66,13 +70,11 @@ body {
     position: fixed;
     overflow: hidden;
 
-
     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 2s; /* Firefox < 16 */
         -ms-animation: fadein 2s; /* Internet Explorer */
          -o-animation: fadein 2s; /* Opera < 12.1 */
             animation: fadein 2s;
-
 
     }
 
@@ -83,12 +85,10 @@ body {
 canvas {
 
     touch-action: none;
-
     z-index: -1;
 
     /*mix-blend-mode: overlay;*/
     opacity: 1;
-
 
     height: 100vh;
     width: 100vw; 
@@ -205,7 +205,7 @@ footer {
 }
 
 @media only screen 
-and (max-width : 560px) {
+and (max-width : 568px) {
     
     footer { bottom: 4rem; }
 }
